// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: FilterOrField when rendering should work with full props 1`] = `
<fieldset
  className="nice-form-group"
>
  <legend>
    Or filter
  </legend>
  <ul
    className="list-component"
  >
    <li>
      <ul
        className="select-list-component"
      >
        <li>
          <div
            className="nice-control-group"
          >
            <span
              className="nice-input-addon"
            >
              Field
            </span>
            <input
              className="nice-form-control"
              disabled={undefined}
              onChange={[Function]}
              onKeyPress={null}
              placeholder="Field..."
              type="text"
              value="foo"
            />
            <span
              className="nice-input-addon"
            >
              Boolean
            </span>
            <div
              className="nice-dropdown nice-form-control"
            >
              <button
                className="nice-btn"
                disabled={false}
                onClick={[Function]}
              >
                False
                <i
                  className="icon fa-angle-down"
                />
              </button>
              <ul
                className="dropdown-menu"
                onClick={[Function]}
              >
                <li
                  className={null}
                  data-value={true}
                  onClick={[Function]}
                >
                  <a>
                    True
                  </a>
                </li>
                <li
                  className="info"
                  data-value={false}
                  onClick={[Function]}
                >
                  <a>
                    False
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <button
            className="nice-btn select-list-component__delete warning icon fa-minus"
            name="del"
            onClick={[Function]}
          >
            ​
          </button>
        </li>
        <li
          className="select-list-component__last"
        >
          <div
            className="nice-dropdown nice-form-control select-list-component__add"
            color="primary"
            name="add"
          >
            <button
              className="nice-btn"
              disabled={false}
              onClick={[Function]}
            >
              Add...
              <i
                className="icon fa-angle-down"
              />
            </button>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
            >
              <li
                className="info"
                data-value={null}
                onClick={[Function]}
              >
                <a>
                  Add...
                </a>
              </li>
              <li
                className={null}
                data-value="or"
                onClick={[Function]}
              >
                <a>
                  Or
                </a>
              </li>
              <li
                className={null}
                data-value="boolean"
                onClick={[Function]}
              >
                <a>
                  Boolean
                </a>
              </li>
              <li
                className={null}
                data-value="textfield"
                onClick={[Function]}
              >
                <a>
                  Textfield
                </a>
              </li>
              <li
                className={null}
                data-value="formula"
                onClick={[Function]}
              >
                <a>
                  Formula
                </a>
              </li>
            </ul>
          </div>
        </li>
      </ul>
      <button
        className="nice-btn list-component__delete warning icon fa-minus"
        disabled={false}
        name="del"
        onClick={[Function]}
      >
        ​
      </button>
    </li>
    <li>
      <ul
        className="select-list-component"
      >
        <li>
          <div
            className="nice-control-group"
          >
            <span
              className="nice-input-addon"
            >
              Field
            </span>
            <input
              className="nice-form-control"
              disabled={undefined}
              onChange={[Function]}
              onKeyPress={null}
              placeholder="Field..."
              type="text"
              value="bar"
            />
            <span
              className="nice-input-addon"
            >
              Boolean
            </span>
            <div
              className="nice-dropdown nice-form-control"
            >
              <button
                className="nice-btn"
                disabled={false}
                onClick={[Function]}
              >
                True
                <i
                  className="icon fa-angle-down"
                />
              </button>
              <ul
                className="dropdown-menu"
                onClick={[Function]}
              >
                <li
                  className="info"
                  data-value={true}
                  onClick={[Function]}
                >
                  <a>
                    True
                  </a>
                </li>
                <li
                  className={null}
                  data-value={false}
                  onClick={[Function]}
                >
                  <a>
                    False
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <button
            className="nice-btn select-list-component__delete warning icon fa-minus"
            name="del"
            onClick={[Function]}
          >
            ​
          </button>
        </li>
        <li
          className="select-list-component__last"
        >
          <div
            className="nice-dropdown nice-form-control select-list-component__add"
            color="primary"
            name="add"
          >
            <button
              className="nice-btn"
              disabled={false}
              onClick={[Function]}
            >
              Add...
              <i
                className="icon fa-angle-down"
              />
            </button>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
            >
              <li
                className="info"
                data-value={null}
                onClick={[Function]}
              >
                <a>
                  Add...
                </a>
              </li>
              <li
                className={null}
                data-value="or"
                onClick={[Function]}
              >
                <a>
                  Or
                </a>
              </li>
              <li
                className={null}
                data-value="boolean"
                onClick={[Function]}
              >
                <a>
                  Boolean
                </a>
              </li>
              <li
                className={null}
                data-value="textfield"
                onClick={[Function]}
              >
                <a>
                  Textfield
                </a>
              </li>
              <li
                className={null}
                data-value="formula"
                onClick={[Function]}
              >
                <a>
                  Formula
                </a>
              </li>
            </ul>
          </div>
        </li>
      </ul>
      <button
        className="nice-btn list-component__delete warning icon fa-minus"
        disabled={false}
        name="del"
        onClick={[Function]}
      >
        ​
      </button>
    </li>
    <li>
      <ul
        className="select-list-component"
      >
        <li
          className="select-list-component__last"
        >
          <div
            className="nice-dropdown nice-form-control select-list-component__add"
            color="primary"
            name="add"
          >
            <button
              className="nice-btn"
              disabled={false}
              onClick={[Function]}
            >
              Add...
              <i
                className="icon fa-angle-down"
              />
            </button>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
            >
              <li
                className="info"
                data-value={null}
                onClick={[Function]}
              >
                <a>
                  Add...
                </a>
              </li>
              <li
                className={null}
                data-value="or"
                onClick={[Function]}
              >
                <a>
                  Or
                </a>
              </li>
              <li
                className={null}
                data-value="boolean"
                onClick={[Function]}
              >
                <a>
                  Boolean
                </a>
              </li>
              <li
                className={null}
                data-value="textfield"
                onClick={[Function]}
              >
                <a>
                  Textfield
                </a>
              </li>
              <li
                className={null}
                data-value="formula"
                onClick={[Function]}
              >
                <a>
                  Formula
                </a>
              </li>
            </ul>
          </div>
        </li>
      </ul>
      <button
        className="nice-btn list-component__delete warning icon fa-minus"
        disabled={true}
        name="del"
        onClick={[Function]}
      >
        ​
      </button>
    </li>
  </ul>
</fieldset>
`;

exports[`Component: FilterOrField when rendering should work with minimum props 1`] = `
<fieldset
  className="nice-form-group"
>
  <legend>
    Or filter
  </legend>
  <ul
    className="list-component"
  >
    <li>
      <ul
        className="select-list-component"
      >
        <li
          className="select-list-component__last"
        >
          <div
            className="nice-dropdown nice-form-control select-list-component__add"
            color="primary"
            name="add"
          >
            <button
              className="nice-btn"
              disabled={false}
              onClick={[Function]}
            >
              Add...
              <i
                className="icon fa-angle-down"
              />
            </button>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
            >
              <li
                className="info"
                data-value={null}
                onClick={[Function]}
              >
                <a>
                  Add...
                </a>
              </li>
              <li
                className={null}
                data-value="or"
                onClick={[Function]}
              >
                <a>
                  Or
                </a>
              </li>
              <li
                className={null}
                data-value="boolean"
                onClick={[Function]}
              >
                <a>
                  Boolean
                </a>
              </li>
              <li
                className={null}
                data-value="textfield"
                onClick={[Function]}
              >
                <a>
                  Textfield
                </a>
              </li>
              <li
                className={null}
                data-value="formula"
                onClick={[Function]}
              >
                <a>
                  Formula
                </a>
              </li>
            </ul>
          </div>
        </li>
      </ul>
      <button
        className="nice-btn list-component__delete warning icon fa-minus"
        disabled={true}
        name="del"
        onClick={[Function]}
      >
        ​
      </button>
    </li>
  </ul>
</fieldset>
`;
